[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://menus/Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/GameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/Logo.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Transition" parent="." instance=ExtResource( 4 )]

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 256.0
margin_top = 46.0
margin_right = 384.0
margin_bottom = 314.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]

[node name="NewGameButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 76.0
margin_right = 128.0
margin_bottom = 98.0
text = "New Game"

[node name="AboutButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 102.0
margin_right = 128.0
margin_bottom = 124.0
text = "About"

[node name="QuitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 128.0
margin_right = 128.0
margin_bottom = 150.0
text = "Quit"

[node name="Space" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 128.0
margin_bottom = 172.0
align = 1

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 128.0
margin_bottom = 194.0
text = "High Score"
align = 1

[node name="ResetHighScoreButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 198.0
margin_right = 128.0
margin_bottom = 220.0
text = "Reset High Score"

[node name="HighLevelLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 128.0
margin_bottom = 242.0
text = "High Level"
align = 1

[node name="ResetHighLevelButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 246.0
margin_right = 128.0
margin_bottom = 268.0
text = "Reset High Level"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetHighScoreButton" to="." method="_on_ResetHighScoreButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetHighLevelButton" to="." method="_on_ResetHighLevelButton_pressed"]
